--- a/local_deployment/files/docker-compose.yml
+++ b/local_deployment/files/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     container_name: "hermes-keycloak"
     depends_on: 
       - db
-    image: "europe-west2-docker.pkg.dev/hua-hermes/keycloak/prod:5414f5f"
+    image: "europe-west2-docker.pkg.dev/hua-hermes/keycloak/prod"
     # Both internal and external requests are being made to keycloak. So URL must be the same for both cases
     # Change the HTTP port to 80 to make the alias truly work
     command: ["-b 0.0.0.0", "-Dkeycloak.migration.action=import", "-Dkeycloak.migration.provider=singleFile", "-Dkeycloak.migration.file=/opt/jboss/keycloak/imports/hermes-export-dev.json", "-Dkeycloak.migration.strategy=IGNORE_EXISTING", "-Djboss.http.port=80"]
@@ -39,7 +39,7 @@ services:
     depends_on: 
       - db
       - keycloak
-    image: "europe-west2-docker.pkg.dev/hua-hermes/back-end/prod:4ca9b8f"
+    image: "europe-west2-docker.pkg.dev/hua-hermes/back-end/prod"
     environment:
       DB_URL: hermes-mysql
       DB_SCHEMA: hermes
@@ -55,7 +55,7 @@ services:
       - db
       - keycloak
       - backend
-    image: "europe-west2-docker.pkg.dev/hua-hermes/internal-front-end/prod:7fcd6c2"
+    image: "europe-west2-docker.pkg.dev/hua-hermes/internal-front-end/prod"
     environment:
       KEYCLOAK_AUTH_SERVER_URL: http://sso.hermes.local/auth
       KEYCLOAK_CREDENTIALS_SECRET: 9855054d-647a-426b-902c-9d9f539027bf
@@ -70,7 +70,7 @@ services:
       - db
       - keycloak
       - backend
-    image: "europe-west2-docker.pkg.dev/hua-hermes/external-front-end/prod:f77f051"
+    image: "europe-west2-docker.pkg.dev/hua-hermes/external-front-end/prod"
     environment:
       KEYCLOAK_AUTH_SERVER_URL: http://sso.hermes.local/auth
       KEYCLOAK_CREDENTIALS_SECRET: 81aac51a-17cf-4bff-8983-97f90403ee0a
